tests/snapshots/integration_tests__stdlib_primitives_GlobalAvgPool.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron GlobalAvgPool:
  inputs:
    default: [batch, channels, *, *]
  outputs:
    default: [batch, channels, 1, 1]
  impl:
    Source: core,pooling/GlobalAvgPool
