tests/snapshots/integration_tests__stdlib_primitives_GlobalMaxPool.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron GlobalMaxPool:
  inputs:
    default: [batch, channels, *, *]
  outputs:
    default: [batch, channels, 1, 1]
  impl:
    Source: core,pooling/GlobalMaxPool
