tests/snapshots/integration_tests__stdlib_primitives_GroupNorm.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron GroupNorm(num_groups, num_channels):
  inputs:
    default: [batch, num_channels, *spatial]
  outputs:
    default: [batch, num_channels, *spatial]
  impl:
    Source: core,normalization/GroupNorm
