tests/snapshots/integration_tests__stdlib_primitives_HyperCollapse.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron HyperCollapse:
  inputs:
    default: [*batch, n, dim]
  outputs:
    default: [*batch, dim]
  impl:
    Source: core,connections/HyperCollapse
