tests/snapshots/integration_tests__stdlib_primitives_Identity.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Identity:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,structural/Identity
