tests/snapshots/integration_tests__stdlib_primitives_LearnedPositionalEmbedding.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron LearnedPositionalEmbedding(max_positions, embedding_dim):
  inputs:
    default: [*batch, seq_len, embedding_dim]
  outputs:
    default: [*batch, seq_len, embedding_dim]
  impl:
    Source: core,embeddings/LearnedPositionalEmbedding
