tests/snapshots/integration_tests__stdlib_primitives_Linear.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Linear(in_dim, out_dim):
  inputs:
    default: [*batch, in_dim]
  outputs:
    default: [*batch, out_dim]
  impl:
    Source: core,nn/Linear
